# fotomalovanky-admin

./: .editorconfig  .env.example  .envrc  .gitignore  README.md  docker-compose.yml  fotomalovanky-admin.code-workspace
backend/: .dockerignore  .env.example  README.md  pyproject.toml
backend/.cursor/plans/: mercure_tracking_backup.plan.md  original_mercure_tracking.plan.md  processing_status_plan_old.plan.md  redesign_processing_status_with_flags_e2997860.plan.md  separate_processing_status_enums_d0ee1832.plan.md
backend/.cursor/rules/: backend.mdc
backend/.docker/dev/: Dockerfile
backend/.docker/nginx/: default.conf
backend/app/: __init__.py  config.py  db.py  logging.py  main.py  worker.py
backend/app/api/v1/: __init__.py  health.py  orders.py  webhooks.py
backend/app/db/: __init__.py  exceptions.py  mercure_protocol.py  processing_lock.py  session.py  tracked_session.py
backend/app/graphql/queries/: get_order.graphql  list_orders.graphql
backend/app/models/: __init__.py  base_version.py  coloring.py  enums.py  events.py  manual_order_sequence.py  order.py  status.py  types.py
backend/app/models/utils/: auto_increment.py
backend/app/scripts/: codegen.py  dramatiq_worker.py
backend/app/services/: __init__.py  exceptions.py  image_proc.py  mercure.py  runpod.py  shopify.py  vectorizer.py
backend/app/services/coloring/: __init__.py  coloring_generation_service.py  coloring_service.py  exceptions.py  svg_generation_service.py  (+1 more)
backend/app/tasks/: __init__.py  broker.py  decorators.py  fetch_shopify.py  image_download.py  order_ingestion.py  recovery.py  utils.py
backend/app/utils/: __init__.py  datetime_utils.py  redis.py  redis_lock.py  request_retry.py  shopify_helpers.py  url_helpers.py
backend/certs/: brightdata.crt
backend/migrations/: env.py
backend/migrations/versions/: 001_shopify_id_to_bigint.py  002_add_payment_status_shipping_method.py  003_add_coloring_svg_versions.py  004_separate_processing_status_enums.py  4bf86552fe5b_initial_schema.py  59d0e8a1b461_add_job_id_columns.py  7c5d4e6f8a9b_add_status_flags_and_timestamps.py
backend/scripts/: migrate_storage_paths.py
(+117 files in other folders)
